po: update po/it_IT/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/financial.po
+++ b/po/it_IT/financial.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # Marco Mapelli <marco.mapelli@slamservice.it>, 2015
 # Pietro De Nicolao <powerpdn@gmail.com>, 2013
 # LinoLinux <reni.marco@gmail.com>, 2014
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-02 18:43+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,19 +24,19 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Record:"
-msgstr ""
+msgstr "Record:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created By:"
-msgstr ""
+msgstr "Creato Da:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created Date:"
-msgstr ""
+msgstr "Creato Il:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Last Modified By:"
-msgstr ""
+msgstr "Ultima Modifica Da:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
@@ -134,7 +135,7 @@ msgstr "Codice Contabilità"
 #: CRM/Financial/DAO/FinancialAccount.php
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Account Type Code"
-msgstr ""
+msgstr "Tipo Codice Contabilità"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Description"
@@ -174,7 +175,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction ID"
-msgstr ""
+msgstr "ID Transazione Finanziaria"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction From Account"
@@ -186,7 +187,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Date"
-msgstr ""
+msgstr "Data Transazione Finanziaria"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Total Amount"
@@ -214,7 +215,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialType.php
 msgid "Is Tax Deductible?"
-msgstr ""
+msgstr "È Deducibile?"
 
 #: CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type is Reserved?"
@@ -348,7 +349,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Expiry Date"
-msgstr ""
+msgstr "Data Scadenza"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Masked Account Number"
@@ -356,7 +357,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "IP Address"
-msgstr ""
+msgstr "Indirizzo IP"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Accounting Batch - %1"
@@ -388,7 +389,7 @@ msgstr "Attività"
 
 #: CRM/Financial/Form/BatchTransaction.php CRM/Financial/Form/Search.php
 msgid "- actions -"
-msgstr ""
+msgstr "- azioni -"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Remove from Batch"
@@ -479,7 +480,7 @@ msgstr "Numero di transazioni"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Please select a valid contact."
-msgstr ""
+msgstr "Per favore, seleziona un contatto valido."
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Number of Transactions should a positive number"
@@ -503,7 +504,7 @@ msgstr ""
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "You dont have permission to %1 this batch"
-msgstr ""
+msgstr "Non hai il permesso per %1 questo batch"
 
 #: CRM/Financial/Form/FinancialType.php
 msgid "Selected financial type has been deleted."
@@ -623,7 +624,7 @@ msgstr ""
 
 #: CRM/Financial/Page/FinancialType.php
 msgid "Accounts"
-msgstr ""
+msgstr "Conti"
 
 #: CRM/Financial/Page/FinancialTypeAccount.php
 msgid "Edit Financial Type Account"
@@ -723,7 +724,7 @@ msgstr ""
 
 #: templates/CRM/Financial/Form/FinancialType.tpl
 msgid "Are contributions of this type tax-deductible?"
-msgstr ""
+msgstr "I contributi di questo tipo sono deducibili dalle tasse?"
 
 #: templates/CRM/Financial/Form/FinancialType.tpl
 msgid "View or Edit Financial Accounts"
@@ -799,15 +800,15 @@ msgstr "Errore nell'elaborazione della richiesta."
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "This record already has the status"
-msgstr ""
+msgstr "Questo record ha già lo status"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "The following records already have the status"
-msgstr ""
+msgstr "I seguenti record hanno già lo status"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Cannot"
-msgstr ""
+msgstr "Non può"
 
 #: templates/CRM/Financial/Form/Search.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
@@ -838,11 +839,11 @@ msgstr "Aggiornamento"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Are you sure you want to close this batch?"
-msgstr ""
+msgstr "Sei sicuro di voler chiudere questo batch?"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Are you sure you want to close and export this batch?"
-msgstr ""
+msgstr "Sei sicuro di voler chiudere ed esportare questo batch?"
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid ""
@@ -859,7 +860,7 @@ msgstr ""
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid "Account Type"
-msgstr ""
+msgstr "Tipo Conto"
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid ""
@@ -942,7 +943,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Method:"
-msgstr ""
+msgstr "Metodo di Pagamento:"
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid ""
@@ -962,19 +963,19 @@ msgstr ""
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
-msgstr ""
+msgstr "ID Valuta"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency Symbol"
-msgstr ""
+msgstr "Simbolo Valuta"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency Numeric Code"
-msgstr ""
+msgstr "Codice Numerico Valuta"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Full Currency Name"
-msgstr ""
+msgstr "Nome Completo Valuta"
 
 #: CRM/Financial/DAO/EntityFinancialAccount.php
 msgid "Entity Financial Account ID"
@@ -1054,4 +1055,4 @@ msgstr ""
 msgid ""
 "Note that not all transactions are necessarily associated with a payment "
 "method."
-msgstr ""
+msgstr "Nota che non tutte le transazioni sono necessariamente associate con un metodo di pagamento."
