--- a/po/ne_NP/admin.po
+++ b/po/ne_NP/admin.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Dilip Raj Baral <mail@diliprajbaral.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-30 13:12+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-02 13:11+0000\n"
+"Last-Translator: Dilip Raj Baral <mail@diliprajbaral.com>\n"
 "Language-Team: Nepali (Nepal) (http://www.transifex.com/civicrm/civicrm/language/ne_NP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +19,7 @@ msgstr ""
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Basic Contact Type"
-msgstr ""
+msgstr "सामान्य सम्पर्क प्रकार"
 
 #: CRM/Admin/Form/ContactType.php
 msgid ""
