po: update po/ne_NP/queue.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ne_NP/queue.po
+++ b/po/ne_NP/queue.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-31 09:24+0000\n"
+"PO-Revision-Date: 2016-06-02 13:09+0000\n"
 "Last-Translator: Dilip Raj Baral <mail@diliprajbaral.com>\n"
 "Language-Team: Nepali (Nepal) (http://www.transifex.com/civicrm/civicrm/language/ne_NP/)\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +19,7 @@ msgstr ""
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue Name"
-msgstr ""
+msgstr "कतारको नाम​"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Submit Time"
@@ -27,16 +27,16 @@ msgstr "समय पेश गर्नुहोस्"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Release Time"
-msgstr ""
+msgstr "जारी गर्ने समय​"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue item datas"
-msgstr ""
+msgstr "कतार बस्तुको डाटा"
 
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
-msgstr ""
+msgstr "चालक"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue ID"
-msgstr ""
+msgstr "कतार नम्बर​"
