po: update po/ne_NP/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ne_NP/menu.po
+++ b/po/ne_NP/menu.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-30 13:36+0000\n"
+"PO-Revision-Date: 2016-06-02 13:16+0000\n"
 "Last-Translator: Dilip Raj Baral <mail@diliprajbaral.com>\n"
 "Language-Team: Nepali (Nepal) (http://www.transifex.com/civicrm/civicrm/language/ne_NP/)\n"
 "MIME-Version: 1.0\n"
@@ -64,12 +64,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Reserve Respondents"
-msgstr ""
+msgstr "उत्तरदाताओं आरक्षण"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Release Respondents"
-msgstr ""
+msgstr "उत्तरदाताओं जारी"
 
 msgctxt "menu"
 msgid "Record Respondents Interview"
@@ -86,11 +86,11 @@ msgstr "नयाँ आवेदन"
 
 msgctxt "menu"
 msgid "Sign Petition"
-msgstr ""
+msgstr "आवेदन हस्ताक्षर गर्नुहोस्"
 
 msgctxt "menu"
 msgid "View Petition Signatures"
-msgstr ""
+msgstr "आवेदन हस्ताक्षर हेर्नुहोस्"
 
 msgctxt "menu"
 msgid "Email address verified"
