po: update po/it_IT/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/install.po
+++ b/po/it_IT/install.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # Francesco Moretto <francesco@moretto.it>, 2015
 # grdndr <gardo_jr@yahoo.it>, 2014
 # LinoLinux <reni.marco@gmail.com>, 2014
@@ -10,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 16:48+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-02 19:36+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,13 +22,13 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Please correct your install location"
-msgstr ""
+msgstr "Oops! Per favore, correggi la tua install location"
 
 #: install/index.php
 msgid ""
 "Please untar (uncompress) your downloaded copy of CiviCRM in the "
 "<strong>%1</strong> directory below your Drupal root directory."
-msgstr ""
+msgstr "Per favore untar (decomprimi) la tua copia scaricata di CiviCRM nella <strong>%1</strong> directory sotto la tua root directory Drupal."
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
@@ -35,7 +36,7 @@ msgstr "Oops! CiviCRM è già installato"
 
 #: install/index.php
 msgid "[your Drupal root directory]"
-msgstr ""
+msgstr "[la tua root directory di Drupal]"
 
 #: install/index.php
 msgid "Installation Guide"
@@ -48,29 +49,29 @@ msgid ""
 "<strong>civicrm.settings.php</strong> - from <strong>%1</strong>.</li><li>To"
 " <strong>upgrade an existing installation</strong>, <a href='%2'>refer to "
 "the online documentation</a>.</li></ul>"
-msgstr ""
+msgstr "CiviCRM è già stato installato. <ul><li>Per <strong>ricominciare</strong>, devi cancellare o rinominare il file di configurazione di CiviCRM - <strong>civicrm.settings.php</strong> - da <strong>%1</strong>.</li><li>Per <strong>aggiornare un'installazione esistente</strong>, <a href='%2'>consulta la documentazione online</a>.</li></ul>"
 
 #: install/index.php
 msgid "Oops! Incorrect CiviCRM version"
-msgstr ""
+msgstr "Oops! Versione di CiviCRM non corretta"
 
 #: install/index.php
 msgid "This installer can only be used for the Drupal version of CiviCRM."
-msgstr ""
+msgstr "Questo installer può essere usato solo per la versione Drupal di CiviCRM."
 
 #: install/index.php
 msgid "Oops! Incorrect Drupal version"
-msgstr ""
+msgstr "Oops! Versione di Drupal non corretta"
 
 #: install/index.php
 msgid ""
 "This version of CiviCRM can only be used with Drupal 6.x or 7.x. Please "
 "ensure that '%1' exists if you are running Drupal 7.0 and over."
-msgstr ""
+msgstr "Questa versione di CiviCRM può solo essere usata con Drupal 6.x o 7.x. Per favore assicurati che '%1' exista se stai eseguando Drupal 7.0 e successivi."
 
 #: install/index.php
 msgid "This installer can only be used for the WordPress version of CiviCRM."
-msgstr ""
+msgstr "Questo installer può essere usato solo per la versione WordPress di CiviCRM."
 
 #: install/index.php
 msgid "PHP Configuration"
@@ -94,7 +95,7 @@ msgstr "Il server esiste?"
 
 #: install/index.php
 msgid "Can't find the a MySQL server on '%1'."
-msgstr ""
+msgstr "Impossibile trovare un server MySQL su '%1'."
 
 #: install/index.php
 msgid "Are the access credentials correct?"
@@ -110,11 +111,11 @@ msgstr "La versione MySQL deve essere almeno %1"
 
 #: install/index.php
 msgid "MySQL version %1 or higher is required, you are running MySQL %2."
-msgstr ""
+msgstr "È richiesta la versione di MySQL %1 o superiore, tu stai eseguendo MySQL %2."
 
 #: install/index.php
 msgid "MySQL %1"
-msgstr ""
+msgstr "MySQL %1"
 
 #: install/index.php
 msgid "Is auto_increment_increment set to 1"
@@ -142,7 +143,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Can I access/create the database?"
-msgstr ""
+msgstr "Posso accedere/creare il database?"
 
 #: install/index.php
 msgid "I can't create new databases and the database '%1' doesn't exist."
@@ -150,7 +151,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Can I access/create InnoDB tables in the database?"
-msgstr ""
+msgstr "Posso accedere/creare le tabelle InnoDB nel database?"
 
 #: install/index.php
 msgid ""
@@ -160,7 +161,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Can I create temporary tables in the database?"
-msgstr ""
+msgstr "Posso creare tabelle temporanee nel database?"
 
 #: install/index.php
 msgid ""
@@ -179,7 +180,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Can I create triggers in the database?"
-msgstr ""
+msgstr "Posso creare i trigger nel database?"
 
 #: install/index.php
 msgid ""
@@ -217,11 +218,11 @@ msgstr ""
 
 #: install/index.php
 msgid "Folder '%1' exists?"
-msgstr ""
+msgstr "La cartella '%1' esiste?"
 
 #: install/index.php
 msgid "There is no '%1' folder."
-msgstr ""
+msgstr "Non c'è la cartella '%1'."
 
 #: install/index.php
 msgid "Is the %1 folder writeable?"
@@ -233,17 +234,17 @@ msgstr "Non riesco a determinare il webserver in uso."
 
 #: install/index.php
 msgid "Webserver config"
-msgstr ""
+msgstr "Configurazione webserver"
 
 #: install/index.php
 msgid "Recognised webserver"
-msgstr ""
+msgstr "Webserver riconosciuto"
 
 #: install/index.php
 msgid ""
 "You seem to be using an unsupported webserver. The server variables "
 "SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME need to be set."
-msgstr ""
+msgstr "Sembra che tu stia usando un webserver non supportato. Le variabili SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME del server necessitano essere settate."
 
 #: install/index.php
 msgid "JSON support"
@@ -255,7 +256,7 @@ msgstr "Il supporto per JSON non è incluso in PHP."
 
 #: install/index.php
 msgid "XCache compatibility"
-msgstr ""
+msgstr "Compatibilità XCache"
 
 #: install/index.php
 msgid ""
@@ -275,7 +276,7 @@ msgstr ""
 
 #: install/index.php
 msgid "You only have %1 allocated"
-msgstr ""
+msgstr "Hai solo %1 allocati"
 
 #: install/index.php
 msgid ""
@@ -291,7 +292,7 @@ msgstr "I seguenti problemi mi impediscono di installare CiviCRM:"
 msgid ""
 "You need PHP version %1 or later, only %2 is installed. Please upgrade your "
 "server, or ask your web-host to do so."
-msgstr ""
+msgstr "Hai bisogno di PHP versione %1 or successiva, è installata solo la %2. Per favore aggiorna il tuo server, o chiedi al tuo web-host di farlo."
 
 #: install/index.php
 msgid ""
@@ -301,11 +302,11 @@ msgstr ""
 
 #: install/index.php
 msgid "file '%1' not found"
-msgstr ""
+msgstr "file '%1' non trovato"
 
 #: install/index.php
 msgid "file '%1' found"
-msgstr ""
+msgstr "file '%1' trovato"
 
 #: install/index.php
 msgid ""
@@ -321,89 +322,89 @@ msgstr ""
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no."
-msgstr ""
+msgstr "Non posso determinare se MySQL ha il supporto InnoDB. Suppongo di no"
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
-msgstr ""
+msgstr "Il server MySQL non ha il supporto InnoDB"
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no"
-msgstr ""
+msgstr "Non posso determinare se MySQL ha il supporto InnoDB. Suppongo di no"
 
 #: install/index.php
 msgid "Could not login to the database."
-msgstr ""
+msgstr "Non posso accedere al database."
 
 #: install/index.php
 msgid "Could not select the database."
-msgstr ""
+msgstr "Non posso selezionare il database."
 
 #: install/index.php
 msgid "Could not create a temp table."
-msgstr ""
+msgstr "Non posso creare una tabella temporanea."
 
 #: install/index.php
 msgid "Could not create a table in the database."
-msgstr ""
+msgstr "Non posso creare una tabella nel database."
 
 #: install/index.php
 msgid "Could not create a database trigger."
-msgstr ""
+msgstr "Non posso creare un database trigger."
 
 #: install/index.php
 msgid "Could not connect to the database server."
-msgstr ""
+msgstr "Non posso connettermi al server database."
 
 #: install/index.php
 msgid "Could not obtain a write lock for the database table."
-msgstr ""
+msgstr "Non posso ottenere un write lock per la tabella del database."
 
 #: install/index.php
 msgid "Could not release the lock for the database table."
-msgstr ""
+msgstr "Non posso rilasciare il lock per la tabella del database."
 
 #: install/index.php
 msgid "Could not query database server variables."
-msgstr ""
+msgstr "Non posso interrogare le variabili del server database."
 
 #: install/index.php
 msgid "MySQL server auto_increment_increment is 1"
-msgstr ""
+msgstr "MySQL server auto_increment_increment è 1"
 
 #: install/index.php
 msgid "Could not get information about the thread_stack of the database."
-msgstr ""
+msgstr "Non posso ottenere le informationi sul thread_stack del database."
 
 #: install/index.php
 msgid "MySQL \"thread_stack\" is %1 kb"
-msgstr ""
+msgstr "MySQL \"thread_stack\" è %1 kb"
 
 #: install/index.php
 msgid "The database: '%1' does not exist."
-msgstr ""
+msgstr "Il database: '%1' non esiste."
 
 #: install/index.php
 msgid "Able to create a new database."
-msgstr ""
+msgstr "Abile a creare un nuovo database"
 
 #: install/index.php
 msgid "user '%1' doesn't have CREATE DATABASE permissions."
-msgstr ""
+msgstr "l'utente '%1' non ha le permissioni CREATE DATABASE."
 
 #: install/index.php
 msgid "the following PHP variables are missing: %1"
-msgstr ""
+msgstr "le seguenti variabili PHP sono mancanti: %1"
 
 #: install/index.php
 msgid "Oops! Could not create database %1"
-msgstr ""
+msgstr "Oops! Non posso creare il database %1"
 
 #: install/index.php
 msgid ""
 "We encountered an error when attempting to create the database. Please check"
 " your MySQL server permissions and the database name and try again."
-msgstr ""
+msgstr "Abbiamo ottenuto un errore tentanto di creare il database. Per favore controlla le permissioni del tuo server MySQL e il nome del database e prova di nuovo."
 
 #: install/index.php
 msgid ""
@@ -419,15 +420,15 @@ msgstr ""
 msgid ""
 "We have integrated KCFinder with CKEditor and TinyMCE. This allows a user to"
 " upload images. All uploaded images are public."
-msgstr ""
+msgstr "Abbiamo integrato KCFinder con CKEditor e TinyMCE. Questo consente all'utente di caricare immagini. Tutte le immagini caricate sono pubbliche."
 
 #: install/index.php
 msgid "CiviCRM Installed"
-msgstr ""
+msgstr "CiviCRM Installato"
 
 #: install/index.php
 msgid "CiviCRM has been successfully installed"
-msgstr ""
+msgstr "CiviCRM è stato installato con successo"
 
 #: install/index.php
 msgid ""
@@ -453,7 +454,7 @@ msgstr ""
 
 #: install/index.php
 msgid "<a %1>Refer to the online documentation for more information</a>"
-msgstr ""
+msgstr "<a %1>Consulta la documentazione online per maggiori informazioni</a>"
 
 #: install/template.html
 msgid "CiviCRM Installer"
@@ -461,7 +462,7 @@ msgstr "Programma di installazione di CiviCRM"
 
 #: install/template.html
 msgid "Version %1"
-msgstr ""
+msgstr "Versione %1"
 
 #: install/template.html
 msgid ""
@@ -496,11 +497,11 @@ msgstr "Installazione di CiviCRM in corso..."
 
 #: install/template.html
 msgid "(this will take a few minutes)"
-msgstr "(durerà alcuni minuti)"
+msgstr "(questo durerà alcuni minuti)"
 
 #: install/template.html
 msgid "Language and Region Settings"
-msgstr "Impostazioni di lingua e regione"
+msgstr "Impostazioni di Lingua e Regione"
 
 #: install/template.html
 msgid ""
@@ -521,7 +522,7 @@ msgstr "Cambia lingua"
 
 #: install/template.html
 msgid "Database Version and Connection Settings"
-msgstr ""
+msgstr "Versione Database e Settaggi di Connessione"
 
 #: install/template.html
 msgid ""
@@ -577,11 +578,11 @@ msgstr ""
 
 #: install/template.html
 msgid "CiviCRM Database Details"
-msgstr ""
+msgstr "Dettagli Database CiviCRM"
 
 #: install/template.html
 msgid "Drupal Database Details"
-msgstr ""
+msgstr "Dettagli Database Drupal"
 
 #: install/template.html
 msgid "Requirements"
