--- a/po/it_IT/menu.po
+++ b/po/it_IT/menu.po
@@ -7,6 +7,7 @@
 # Alfredo Lucci <alfredolucci.al@gmail.com>, 2015
 # Antonio de Simone <desimone.webdesign@gmail.com>, 2012
 # Claudio Cosmaro <claudio.cosmaro@gmail.com>, 2012
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # mitch.camp <kal-el@hotmail.it>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # LinoLinux <reni.marco@gmail.com>, 2014
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-02 17:30+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -254,7 +255,7 @@ msgstr "Tipi di finanziaria"
 
 msgctxt "menu"
 msgid "New Payment"
-msgstr ""
+msgstr "Nuovo Pagamento"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -335,7 +336,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "View Payment"
-msgstr ""
+msgstr "Visualizza Pagamento"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -986,7 +987,7 @@ msgstr "Sfoglia file caricati"
 
 msgctxt "menu"
 msgid "Delete File"
-msgstr ""
+msgstr "Cancella File"
 
 msgctxt "menu"
 msgid "Log out"
@@ -1718,7 +1719,7 @@ msgstr "Documentazione"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Fai una domanda"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1733,7 +1734,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr ""
+msgstr "Registra il tuo sito"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2004,7 +2005,7 @@ msgid ""
 "Provides a list of members along with their membership status and membership"
 " details (Join Date, Start Date, End Date). Can also display contributions "
 "(payments) associated with each membership."
-msgstr "Fornisce una lista di iscritti con il loro stato e dettaglio d'iscrizione (Data di )"
+msgstr "Fornisce una lista degli iscritti con il loro stato e dettaglio d'iscrizione (Data di Iscrizione, Data di Inizio, Data di Fine). Può anche mostrare i contributi (pagamenti) associati con ogni iscritto."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2034,7 +2035,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Provides lists of participants for an event."
-msgstr ""
+msgstr "Fornisce liste di partecipanti per un evento."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2157,11 +2158,11 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Methods"
-msgstr ""
+msgstr "Metodi di Pagamento"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "Configura CKEditor"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
@@ -2182,7 +2183,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Status"
-msgstr ""
+msgstr "Stato del Sistema"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2192,17 +2193,17 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Extensions"
-msgstr ""
+msgstr "Estensioni"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr ""
+msgstr "Dettagli Attività"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr ""
+msgstr "Sommario Attività"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
