--- a/po/it_IT/mailing.po
+++ b/po/it_IT/mailing.po
@@ -3,14 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # LinoLinux <reni.marco@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-02 23:41+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,7 +53,7 @@ msgstr "Il mailing selezionato è stato eliminato."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "SMS Message"
-msgstr ""
+msgstr "Messaggio SMS"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Use Template"
@@ -128,7 +129,7 @@ msgstr ""
 #: CRM/Mailing/BAO/Query.php CRM/Mailing/Selector/Event.php
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Unsubscribe Requests"
-msgstr "Richieste di deiscrizione"
+msgstr "Richieste di concellazione iscrizione"
 
 #: CRM/Mailing/BAO/Query.php CRM/Mailing/Selector/Event.php
 #: ang/crmMailing/services.js templates/CRM/Mailing/Page/Report.tpl
@@ -1380,7 +1381,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Save Draft"
-msgstr ""
+msgstr "Salva Bozza"
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Submit and Approve Mailing"
@@ -1425,7 +1426,7 @@ msgstr ""
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid "Conflict"
-msgstr ""
+msgstr "Conflitto"
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid ""
@@ -1527,7 +1528,7 @@ msgstr ""
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Save as:"
-msgstr ""
+msgstr "Salva come:"
 
 #: ang/crmMailing/services.js
 msgid "Subject: %1"
@@ -1539,7 +1540,7 @@ msgstr ""
 
 #: ang/crmMailing/services.js
 msgid "Sending..."
-msgstr ""
+msgstr "Invio..."
 
 #: ang/crmMailing/services.js
 msgid "Unsubscribes"
@@ -1551,7 +1552,7 @@ msgstr ""
 
 #: ang/crmMailing.js ang/crmMailingAB.js
 msgid "Initializing..."
-msgstr ""
+msgstr "Inizializzazione..."
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Template (A)"
@@ -1811,7 +1812,7 @@ msgstr "Nuovo Componente di Mailing"
 
 #: templates/CRM/Mailing/Form/Count.tpl
 msgid "Total Recipients:"
-msgstr "Beneficiari totali"
+msgstr "Destinatari totali:"
 
 #: templates/CRM/Mailing/Form/ForwardMailing.tpl
 msgid "Please enter up to 5 email addresses to receive the mailing."
