--- a/po/it_IT/member.po
+++ b/po/it_IT/member.po
@@ -5,6 +5,7 @@
 # Translators:
 # Alessio <alessio@dba.it>, 2012
 # Andrea Ronchi <ronand@tiscali.it>, 2015-2016
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # LinoLinux <reni.marco@gmail.com>, 2014
 # simone sandri <simone.povoscania@hotmail.it>, 2011
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-02 18:28+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,7 +42,7 @@ msgstr "Iscrizione non valida"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Please select one of the memberships."
-msgstr "Prego selezionare un'iscrizione."
+msgstr "Per favore, selezionare una delle iscrizioni."
 
 #: CRM/Member/BAO/Membership.php
 msgid "Please renew my membership automatically."
@@ -244,15 +245,15 @@ msgstr "Obbligatorio?"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Change Date"
-msgstr "Data di modifica iscrizione"
+msgstr "Data di Modifica Iscrizione"
 
 #: CRM/Member/DAO/MembershipPayment.php
 msgid "Membership Payment ID"
-msgstr ""
+msgstr "ID Pagamento Iscrizione"
 
 #: CRM/Member/DAO/MembershipStatus.php
 msgid "Membership Status ID"
-msgstr ""
+msgstr "ID Stato Iscrizione"
 
 #: CRM/Member/DAO/MembershipStatus.php CRM/Member/Form/MembershipStatus.php
 #: templates/CRM/Member/Page/MembershipStatus.tpl
@@ -298,7 +299,7 @@ msgstr "E' Riservato."
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type ID"
-msgstr ""
+msgstr "ID Tipo Iscrizione"
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type Domain"
@@ -306,7 +307,7 @@ msgstr ""
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type Description"
-msgstr ""
+msgstr "Descrizione Tipo Iscrizione"
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type Organization"
@@ -396,7 +397,7 @@ msgstr ""
 
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
 msgid "Payment From"
-msgstr ""
+msgstr "Pagamento Da"
 
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
 msgid "Send Confirmation and Receipt?"
@@ -1300,7 +1301,7 @@ msgstr ""
 
 #: templates/CRM/Member/Form/MembershipBlock.hlp
 msgid "Separate Payment"
-msgstr ""
+msgstr "Pagamento Separato"
 
 #: templates/CRM/Member/Form/MembershipBlock.hlp
 msgid ""
@@ -1420,7 +1421,7 @@ msgstr "Includi questi tipi di iscrizione"
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid "(Not Available)"
-msgstr ""
+msgstr "(Non Disponibile)"
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid ""
@@ -1487,7 +1488,7 @@ msgstr "Il rinnovo aggiungerà il normale periodo di iscrizione alla data di fin
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "change membership type"
-msgstr ""
+msgstr "cambia tipo di iscrizione"
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "Status of this membership."
@@ -1503,7 +1504,7 @@ msgstr ""
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "change"
-msgstr ""
+msgstr "cambia"
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "membership periods"
@@ -1725,7 +1726,7 @@ msgstr "Se state facendo una ricerca per nome del membro, controllate l'ortograf
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Primary Members"
-msgstr ""
+msgstr "Membri Primari"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
