--- a/po/it_IT/extension.po
+++ b/po/it_IT/extension.po
@@ -3,14 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # ZeroInfinity <gianni.codevico@zeroinfinity.it>, 2013
 # LinoLinux <reni.marco@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-02 23:35+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -91,7 +92,7 @@ msgstr ""
 msgid ""
 "Your extensions directory is not set or is not writable. Click <a "
 "href='%1'>here</a> to set the extensions directory."
-msgstr ""
+msgstr "La tua cartella delle estensioni non è settata o non è scrivibile. Clicca <a href='%1'>qui</a> per settare la cartella delle estensioni."
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
@@ -113,7 +114,7 @@ msgstr ""
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
-msgstr ""
+msgstr "Impossibile estrarre l'estensione: struttura cartelle non valida"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: %1 cannot be cleared"
