po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-16 22:55+0000\n"
+"PO-Revision-Date: 2016-06-06 19:01+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1275,7 +1275,7 @@ msgid ""
 "before you can use Batch Update via Profile. Navigate to Administer > "
 "Customize Data and Screens > Profiles to configure a Profile. Consult the "
 "online Administrator documentation for more information."
-msgstr "Du behöver skapa en profil som innehåller de fält från %1 som du vill kunna ändra innan du använder Massuppdatering via profil. Gå till Administrera -> Anpassa data och skärmsidor -> Profiler för att konfigurera en sådan. Läs mer i online-dokumentationen för administratörer för mer information."
+msgstr "Du behöver skapa en profil som innehåller de fält från %1 som du vill kunna ändra innan du använder Massuppdatering via profil. Gå till Administrera -> Anpassa data och skärmsidor -> Profiler för att konfigurera en sådan. Läs mer i dokumentationen för administratörer för mer information."
 
 #: CRM/Activity/Form/Task/PickProfile.php
 msgid "No Profile Configured"
@@ -8549,15 +8549,15 @@ msgstr ""
 
 #: CRM/Core/Payment/BaseIPN.php CRM/Core/Payment/GoogleIPN.php
 msgid "Online Contribution"
-msgstr "Online-inbetalning"
+msgstr "Webb-inbetalning"
 
 #: CRM/Core/Payment/BaseIPN.php
 msgid "Offline Recurring Contribution"
-msgstr "Återkommande inbetalning som inte görs online"
+msgstr "Återkommande inbetalning som inte görs på webben"
 
 #: CRM/Core/Payment/BaseIPN.php CRM/Core/Payment/GoogleIPN.php
 msgid "Online Event Registration"
-msgstr "Arrangemangsregistrering online"
+msgstr "Arrangemangsanmälan på webben"
 
 #: CRM/Core/Payment/BaseIPN.php
 msgid "Please set a location type of %1"
