po: update po/sv_SE/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/contribute.po
+++ b/po/sv_SE/contribute.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-16 22:54+0000\n"
+"PO-Revision-Date: 2016-06-06 19:00+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1945,7 +1945,7 @@ msgstr "Skriv ut inbetalningar"
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid "Please select only online contributions with Pending status."
-msgstr "Var vänlig och välj bara onlineinbetalningar med väntande status."
+msgstr "Var vänlig och välj bara webbinbetalningar med väntande status."
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid ""
