po: update po/sv_SE/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/drupal-civicrm.po
+++ b/po/sv_SE/drupal-civicrm.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-04-26 13:17+0000\n"
+"PO-Revision-Date: 2016-06-06 19:00+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1104,7 +1104,7 @@ msgstr "Är webbanmälan öppen"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is Online Registration enabled for the event?"
-msgstr "Är onlineregistrering tillåtet för detta arrangemang?"
+msgstr "Är webbanmälan tillåtet för detta arrangemang?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Registration Start Date"
@@ -1112,7 +1112,7 @@ msgstr "Startdatum för anmälningar"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Event's Online Registration Start Date"
-msgstr "Startdatum för onlineregistrering till arrangemanget."
+msgstr "Startdatum för webbanmälan till arrangemanget."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Registration End Date"
@@ -1120,7 +1120,7 @@ msgstr "Slutdatum för anmälningar"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Event's Online Registration End Date"
-msgstr "Slutdatum för onlineregistrering till arrangemanget."
+msgstr "Slutdatum för webbanmälan till arrangemanget."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Registration Link Text"
