--- a/po/sv_SE/common-components.po
+++ b/po/sv_SE/common-components.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-16 22:53+0000\n"
+"PO-Revision-Date: 2016-06-06 19:00+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1296,7 +1296,7 @@ msgstr "När du väl ändrat till att använde en avgiftsstruktur kan du inte ä
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
 "Refer to the online documentation for more details on creating %1 and %2."
-msgstr "Konsultera online-dokumentationen för mer information om att skapa %1 och %2."
+msgstr "Konsultera dokumentationen på webben för mer information om att skapa %1 och %2."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
@@ -1526,7 +1526,7 @@ msgid ""
 "re-usable <strong>message footer</strong>. Refer to the online documentation"
 " for details on how to include required links and contact information as "
 "well as sample messages."
-msgstr "Utskick med CiviMail måste innehålla en länk för att <strong>avsäga/avböja utskick</strong> (\"Avsäga via web-sida\") och <strong>postadressen</strong> för din organisation. Detta minskar risken att utskicken tolkas som SPAM. Elementen kan placeras i själva meddelandet ELLER i en återanvändbar <strong>meddelandefot</strong>. Läs mer i online-dokumentationen om hur man använder de länkar och kontaktinformation som krävs, och exempel på meddelande."
+msgstr "Utskick med CiviMail måste innehålla en länk för att <strong>avsäga/avböja utskick</strong> (\"Avsäga via web-sida\") och <strong>postadressen</strong> för din organisation. Detta minskar risken att utskicken tolkas som SPAM. Elementen kan placeras i själva meddelandet ELLER i en återanvändbar <strong>meddelandefot</strong>. Läs mer i dokumentationen om hur man använder de länkar och kontaktinformation som krävs, och exempel på meddelande."
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp
