po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-16 22:55+0000\n"
+"PO-Revision-Date: 2016-06-06 19:11+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -989,7 +989,7 @@ msgstr "Skicka epost"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email"
-msgstr ""
+msgstr "Registrera åtgärden som automatiskt skickat epost"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email or SMS"
@@ -997,7 +997,7 @@ msgstr "Skicka e-post eller SMS"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email or SMS"
-msgstr ""
+msgstr "Registrera åtgärden som automatiskt skickat epost eller SMS"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send as"
@@ -1075,7 +1075,7 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your new Reminder titled %1 has been saved."
-msgstr ""
+msgstr "Den nya påminnelsen med titeln '%1' har sparats."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your Reminder titled %1 has been updated."
@@ -3221,7 +3221,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Enable repetition."
-msgstr ""
+msgstr "Aktivera upprepning."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "You can manually send out the reminders to these recipients."
@@ -3229,7 +3229,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Email Screen"
-msgstr ""
+msgstr "Epostinnehåll"
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "SMS Screen"
