--- a/po/sv_SE/member.po
+++ b/po/sv_SE/member.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-13 14:10+0000\n"
+"PO-Revision-Date: 2016-06-06 18:58+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -74,7 +74,7 @@ msgstr "Kunde inte hitta en systemtabell"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Online Contribution:"
-msgstr "Bidrag Online"
+msgstr "Webbinbetalning:"
 
 #: CRM/Member/BAO/Membership.php
 msgid ""
