--- a/po/sv_SE/pledge.po
+++ b/po/sv_SE/pledge.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-06 18:58+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,7 +60,7 @@ msgstr ""
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
 "Oops. It looks like there is no valid payment status for online payment."
-msgstr "Hoppsan. Det verkar som om det inte finns någon giltig betalningsstatus för betalning online."
+msgstr "Hoppsan. Det verkar som om det inte finns någon giltig betalningsstatus för betalning på webben."
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "Make Pledge Payment(s):"
