po: update po/sv_SE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-16 22:54+0000\n"
+"PO-Revision-Date: 2016-06-06 19:05+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -112,7 +112,7 @@ msgstr ""
 
 #: CRM/Event/Cart/Form/Cart.php
 msgid "Online Registration for %1"
-msgstr ""
+msgstr "Webbanmälan för %1"
 
 #: CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.php
 msgid "If you have a discount code, enter it here"
@@ -1877,7 +1877,7 @@ msgstr ""
 msgid ""
 "The Role you select here is automatically assigned to people when they "
 "register online for this event (usually the default 'Attendee' role)."
-msgstr "Den roll du anger här är den roll som personer som anmäler sig online får automatiskt. Vanligtvis 'deltagare'."
+msgstr "Den roll du anger här är den roll som personer som anmäler sig på webben får automatiskt. (vanligtvis 'deltagare')."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -2047,7 +2047,7 @@ msgstr "Välj valuta som skall användas vid anmälan till arrangemanget."
 msgid ""
 "If this is a paid event and you want users to be able to register and pay "
 "online, select a payment processor to use."
-msgstr "Om detta är ett avgiftsbelagt arrangemang, och deltagare kan anmäla sig och betala online, välj betalningsfunktion här."
+msgstr "Om detta är ett avgiftsbelagt arrangemang, och deltagare kan anmäla sig och betala på webben, välj betalningsfunktion här."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -2076,7 +2076,7 @@ msgid ""
 "they register online. If using a price set below note that the contribution "
 "record will have this financial type, however line items will be processed "
 "using the actual financial type selected for the price set item."
-msgstr "Den här betalningstypen kommer att användas för inbetalningar gjorda av deltagare när dom anmäler sig online. Om du använder en avgiftsstruktur nedan, notera att betalningsposten kommer att ha denna betalningstyp men enskilda rader kommer att hanteras enligt det som definierats för det enskilda alternativet."
+msgstr "Den här betalningstypen kommer att användas för inbetalningar gjorda av deltagare när dom anmäler sig på webben. Om du använder en avgiftsstruktur nedan, notera att betalningsposten kommer att ha denna betalningstyp men enskilda rader kommer att hanteras enligt det som definierats för det enskilda alternativet."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -3378,7 +3378,7 @@ msgstr ""
 msgid ""
 "start=YYYYMMDD - Specify a different starting date range for the events to "
 "be listed."
-msgstr ""
+msgstr "start=ÅÅÅÅMMDD - ange ett annat start datum för intervallet av arrangemang som skall visas."
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid ""
