po: update po/hu_HU/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/common-base.po
+++ b/po/hu_HU/common-base.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-16 19:23+0000\n"
+"PO-Revision-Date: 2016-06-07 14:36+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -25526,7 +25526,7 @@ msgstr "Ismétlődő adományozások"
 
 #: CRM/Core/SelectValues.php js/model/crm.uf.js
 msgid "Expose Publicly"
-msgstr "Nyilvánossá tesz"
+msgstr "Nyilvánossá téve"
 
 #: CRM/Core/SelectValues.php js/model/crm.uf.js
 msgid "Expose Publicly and for Listings"
