po: update po/hu_HU/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/mailing.po
+++ b/po/hu_HU/mailing.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 19:30+0000\n"
+"PO-Revision-Date: 2016-06-07 14:44+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -2148,7 +2148,7 @@ msgid ""
 "Enter your email address and click <strong>Subscribe</strong>. You will "
 "receive a confirmation request via email shortly. Your subscription will be "
 "activated after you respond to that email."
-msgstr "Add meg az email címed és kattins a <strong>Feliratkozás</strong> gombra. Egy megerősítő emailt fog kapni hamarosan. Ahhoz hogy a feliratkozásait aktiválja válaszoljon erre az emailre."
+msgstr "Adja meg az e-mail címét,  és kattinson a <strong>Feliratkozás</strong> gombra. Egy megerősítő emailt fog kapni hamarosan. Ahhoz hogy a feliratkozását aktiválja válaszoljon erre az e-mailre."
 
 #: templates/CRM/Mailing/Form/Subscribe.tpl
 msgid ""
@@ -2157,7 +2157,7 @@ msgid ""
 "receive a confirmation request via email for each selected list. Activate "
 "your subscription to each list by responding to the corresponding "
 "confirmation email."
-msgstr "Add meg az email címed és tegyen egy pipát minden egyes dobozkába azon levelezőlisták mellé ahova szeretne feliratkozni. Ezek után kattintson a <strong>Feliratkozás</strong> gombra. Egy megerősítő emailt fog kapni hamarosan minden egyes lista után. Ahhoz hogy a feliratkozásait aktiválja válaszoljon minden egyes emailre."
+msgstr "Adja meg az e-mail címét és tegyen egy pipát minden egyes dobozkába azon levelezőlisták mellé ahova szeretne feliratkozni. Ezek után kattintson a <strong>Feliratkozás</strong> gombra. Egy megerősítő emailt fog kapni hamarosan minden egyes lista után. Ahhoz hogy a feliratkozásait aktiválja válaszoljon minden egyes e-mailre."
 
 #: templates/CRM/Mailing/Form/Subscribe.tpl
 msgid "Group Listings."
