po: update po/zh_CN/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/zh_CN/admin.po
+++ b/po/zh_CN/admin.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-25 14:26+0000\n"
+"PO-Revision-Date: 2016-06-07 14:18+0000\n"
 "Last-Translator: 陆西德 <hqcm2013@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -483,7 +483,7 @@ msgstr "你必须至少指定用户名"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment Processor Deleted."
-msgstr ""
+msgstr "付款处理器已删除"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment processor %1 has been saved."
@@ -6868,4 +6868,4 @@ msgid ""
 "This is the communication language. If there are template translation or "
 "tokens, they will be localized accordingly. By default, the system default "
 "language will be used."
-msgstr ""
+msgstr "这是在通信语言。如果有模板翻译或记号，它们将相应本地化。默认情况下，系统默认语言将被使用。"
