--- a/po/fr_CA/install.po
+++ b/po/fr_CA/install.po
@@ -4,13 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Mathieu Lutfy <mathieu@bidon.ca>, 2015-2016
-# samuelsov <samuel@koumbit.org>, 2015
+# samuelsov <samuel@koumbit.org>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:00+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-08 16:36+0000\n"
+"Last-Translator: samuelsov <samuel@koumbit.org>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -412,13 +412,13 @@ msgid ""
 "improvements, target our communications and build the community. If you have"
 " a technical role for this site, be sure to check Keep in Touch to receive "
 "technical updates (a low volume mailing list)."
-msgstr ""
+msgstr "Avez-vous enregistré votre site sur CiviCRM.org ? Si non, merci de prendre quelques minutes pour <a %1>remplir le formulaire d'enregistrement</a> et nous aider à renforcer l'écosystème CiviCRM. L'information collectée nous aidera à prioriser les améliorations, mieux cibler notre communication et construire la communauté. Si vous avez un rôle technique pour ce site, assurez-vous de cocher la case pour recevoir les informations techniques (liste de diffusion à faible trafic)."
 
 #: install/index.php
 msgid ""
 "We have integrated KCFinder with CKEditor and TinyMCE. This allows a user to"
 " upload images. All uploaded images are public."
-msgstr ""
+msgstr "Nous avons intégré KCFinder à CKEditor et TinyMCE. Ceci autorise un utilisateur à télécharger des images. Toutes les images téléchargées sont publiques."
 
 #: install/index.php
 msgid "CiviCRM Installed"
@@ -434,13 +434,13 @@ msgid ""
 "authenticated users access to public CiviCRM forms and features. We "
 "recommend that you <a %1>review these permissions</a> to ensure that they "
 "are appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr ""
+msgstr "Les permissions des utilisateurs Drupal ont été automatiquement définies - permettant l'accès aux formulaires et aux fonctionnalités publics de CiviCRM pour les utilisateurs anonymes et authentifiés. Nous vous recommandons de <a %1>vérifier ces permissions</a> pour vous assurer qu'elle sont conformes à vos besoins (<a %2>pour en savoir plus...</a>)"
 
 #: install/index.php
 msgid ""
 "Use the <a %1>Configuration Checklist</a> to review and configure settings "
 "for your new site"
-msgstr ""
+msgstr "Utilisez la <a %1>Checklist de configuration</a> pour vérifier et modifier les configurations de votre nouveau site"
 
 #: install/index.php
 msgid ""
