--- a/po/es_ES/mailing.po
+++ b/po/es_ES/mailing.po
@@ -11,7 +11,7 @@
 # francescbassas <francesc@babu.cat>, 2014
 # francescbassas <francesc@babu.cat>, 2014
 # Gorehide Tresde <gorehide@gmail.com>, 2016
-# ixiam <info@ixiam.com>, 2013
+# ixiam <info@ixiam.com>, 2013,2016
 # iWi development <iwidevelopment@gmail.com>, 2011
 # ixiam <info@ixiam.com>, 2013
 # Jaime Bedon <jaimebedon@yahoo.com>, 2015
@@ -28,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-26 10:37+0000\n"
-"Last-Translator: Miriam Querol <m.querol@ixiam.com>\n"
+"PO-Revision-Date: 2016-06-08 18:25+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -205,7 +205,7 @@ msgstr "Cuerpo HTML de component de envio "
 #: CRM/Mailing/DAO/Component.php CRM/Mailing/DAO/Mailing.php
 #: templates/CRM/Mailing/Page/Component.tpl
 msgid "Body Text"
-msgstr ""
+msgstr "Cuerpo de texto"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component is Default?"
@@ -253,7 +253,7 @@ msgstr "Responder a correo electrónico"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Body Html"
-msgstr ""
+msgstr "Cuerpo de Html"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Url Tracking"
@@ -327,7 +327,7 @@ msgstr "Campaña de correo"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "No Duplicate emails?"
-msgstr ""
+msgstr "¿No duplicar correos electrónicos?"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing SMS Provider"
@@ -647,11 +647,11 @@ msgstr "Grupo de bajas de suscripciones"
 
 #: CRM/Mailing/Form/Group.php
 msgid "INCLUDE Recipients of These Mailing(s)"
-msgstr ""
+msgstr "INCLUIR destinatarios de este envío(s) de correo."
 
 #: CRM/Mailing/Form/Group.php
 msgid "EXCLUDE Recipients of These Mailing(s)"
-msgstr ""
+msgstr "EXCLUIR destinatarios de este envío(s) de correo."
 
 #: CRM/Mailing/Form/Group.php CRM/Mailing/Form/Settings.php
 #: CRM/Mailing/Form/Test.php CRM/Mailing/Form/Upload.php
