po: update po/ja_JP/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ja_JP/admin.po
+++ b/po/ja_JP/admin.po
@@ -5,6 +5,7 @@
 # Translators:
 # AmishGramish <amish.gramish@gmail.com>, 2014
 # Keiko Jochi, 2015
+# kent_ocean <ke.tanabe@gmail.com>, 2016
 # Masaki Muranaka <monaka@monami-ya.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Satomi Sato <puritira2015@gmail.com>, 2015-2016
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-21 18:04+0000\n"
-"Last-Translator: Satomi Sato <puritira2015@gmail.com>\n"
+"PO-Revision-Date: 2016-06-09 01:55+0000\n"
+"Last-Translator: kent_ocean <ke.tanabe@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2284,7 +2285,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Reconnect"
-msgstr ""
+msgstr "再接続"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Disconnect"
@@ -2302,7 +2303,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "New Connections"
-msgstr ""
+msgstr "新しい接続"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
@@ -2310,7 +2311,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Connect"
-msgstr ""
+msgstr "接続"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "No available applications"
@@ -2326,7 +2327,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connecting..."
-msgstr ""
+msgstr "接続中..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connected"
@@ -2334,7 +2335,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnecting..."
-msgstr ""
+msgstr "再接続中..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnected"
@@ -2342,7 +2343,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnecting..."
-msgstr ""
+msgstr "切断中..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnected"
@@ -2364,7 +2365,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "External Link"
-msgstr ""
+msgstr "外部リンク"
 
 #: ang/crmCxn/PermTable.html
 msgid "Action(s)"
@@ -2372,11 +2373,11 @@ msgstr ""
 
 #: ang/crmCxn/PermTable.html
 msgid "Filter(s)"
-msgstr ""
+msgstr "フィルタ"
 
 #: ang/crmCxn/PermTable.html
 msgid "Field(s)"
-msgstr ""
+msgstr "フィールド"
 
 #: ang/crmCxn/PermTable.html
 msgid ""
@@ -4986,7 +4987,7 @@ msgstr "著者"
 #: templates/CRM/Admin/Page/Extensions/AddNew.tpl
 #: templates/CRM/Admin/Page/Extensions/Main.tpl
 msgid "Version"
-msgstr ""
+msgstr "バージョン"
 
 #: templates/CRM/Admin/Page/ExtensionDetails.tpl
 msgid "Released on"
@@ -5166,7 +5167,7 @@ msgstr "ロケーションタイプは連絡先の場所を区別する手軽な
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Port"
-msgstr ""
+msgstr "ポート"
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Bounce Processing <strong>(Default)</strong>"
@@ -5851,7 +5852,7 @@ msgstr "画像を表示させる場合は、このURLに name=value の形で一
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Parameters"
-msgstr ""
+msgstr "パラメータ"
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Values"
@@ -6299,7 +6300,7 @@ msgstr "予定された事前通知を使用すると、自動的に会員、イ
 
 #: templates/CRM/Admin/Page/ScheduleReminders.tpl
 msgid "Add Reminder"
-msgstr ""
+msgstr "リマインダの追加"
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid ""
@@ -6441,7 +6442,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
-msgstr ""
+msgstr "メニュー項目"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Unrestricted"
@@ -6457,7 +6458,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Separator"
-msgstr ""
+msgstr "セパレータ"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Top level"
@@ -6469,7 +6470,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "CKEditorの設定"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Contacts with no preferred language"
@@ -6477,7 +6478,7 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipients language"
-msgstr ""
+msgstr "受信者の言語"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "System default language"
@@ -6513,7 +6514,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
-msgstr ""
+msgstr "保存に失敗しました"
 
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid ""
@@ -6546,7 +6547,7 @@ msgstr ""
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "CiviCRM System Status"
-msgstr ""
+msgstr "CiviCRM システムステータス"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden"
@@ -6611,7 +6612,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid "Calendar"
-msgstr ""
+msgstr "カレンダー"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Special symbols include:"
@@ -6818,11 +6819,11 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Skin"
-msgstr ""
+msgstr "スキン"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Plugins"
-msgstr ""
+msgstr "プラグイン"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Select optional extra features"
