--- a/po/ja_JP/batch.po
+++ b/po/ja_JP/batch.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # AmishGramish <amish.gramish@gmail.com>, 2014
+# kent_ocean <ke.tanabe@gmail.com>, 2016
 # Satomi Sato <puritira2015@gmail.com>, 2015
 # YASUDA Yukihiro <yukihiro@labornetjp.org>, 2012
 # Yukihiro Yasuda <yasudayukihiro@gmail.com>, 2012,2015
@@ -11,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-09 01:12+0000\n"
+"Last-Translator: kent_ocean <ke.tanabe@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +39,7 @@ msgstr "バッチの再開"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Delete Batch"
-msgstr ""
+msgstr "バッチ削除"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -225,7 +226,7 @@ msgstr "このサイトで作成されたデータ入力バッチがありませ
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Payment Method"
-msgstr ""
+msgstr "支払方法のバッチ"
 
 #: CRM/Batch/DAO/EntityBatch.php
 msgid "EntityBatch ID"
@@ -239,7 +240,7 @@ msgstr ""
 msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple records."
-msgstr ""
+msgstr "選択したプロファイルにおけるファイルまたはオートコンプリート選択タイプのフィールド (複数) は、複数レコードの更新をサポートされていません。"
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
