--- a/po/ja_JP/queue.po
+++ b/po/ja_JP/queue.po
@@ -3,14 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# kent_ocean <ke.tanabe@gmail.com>, 2016
 # Satomi Sato <puritira2015@gmail.com>, 2015
 # Yukihiro Yasuda <yasudayukihiro@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-09 01:31+0000\n"
+"Last-Translator: kent_ocean <ke.tanabe@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,4 +41,4 @@ msgstr "キューランナー"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue ID"
-msgstr ""
+msgstr "キューID"
